# neopatient

./: .gitignore  README.md  cli.py  embed.py  example_batch_config.json  pyproject.toml
data/: ehr-inpatient.all.csv  ehr-inpatient.csv  ehr-outpatient.csv
src/neopatient/: __init__.py  batch_llm.py  cli.py  cli_common.py  cli_db.py  database.py  embed.py  generator.py  llm.py  matcher.py  models.py  sampler.py  schema.py  synthesis.py  verifier.py
src/neopatient.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/neopatient/stats/: ehr-outpatient.csv
src/neopatient/templates/: sample.jinja2  verify.jinja2
templates/: generate.jinja2  sample.jinja2  verify.jinja2
