[project]
name = "neopatient"
version = "0.1.0"
description = "Language-controlled generation of artificial patient records"
authors = [
    { name = "Shiva Kaul", email = "shiva.kaul@gmail.com" }
]
dependencies = [
    "duckdb>=0.10.0",
    "sentence-transformers",
    "chromadb",
    "pandas",
    "openai>=1.0.0",
    "jinja2>=3.1.0"
]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
neopatient = "neopatient.cli:main"