[project]
name = "neopatient"
version = "0.1.0"
description = "Language-controlled generation of artificial patient records"
authors = [
    { name = "Shiva Kaul", email = "pypi@shivakaul.com" }
]
dependencies = [
    "duckdb>=0.10.0",
    "sentence-transformers",
    "chromadb",
    "pandas",
    "openai>=1.0.0",
    "jinja2>=3.1.0",
    "meds",
    "datasets",
    "huggingface_hub",
    "pydantic",
    "pyarrow",
    "ruff",
    "limiter",
    "google-genai>=1.55.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Apache-2.0" }

[project.urls]
Homepage = "https://github.com/shivak/neopatient"
Repository = "https://github.com/shivak/neopatient"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
neopatient = ["templates/*.jinja2", "stats/*.csv"]

[project.scripts]
neopatient = "neopatient.cli:main"
neopatient-db = "neopatient.cli_db:main"
